<resources>
    <string name="app_name">Diving Center</string>
    <string name="sign_up">Sign Up</string>
    <string name="fill">
        Please fill your details below to complete your account
    </string>
    <string name="first_name">Name</string>
    <string name="last_name">Age</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="login">LogIn</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>